src/objects/ACCL__Job_Definition_List__c.object
<CustomObject>
    <description>Holds the set of questions/surveys that are to be carried out in the respective call and contains further relevant configurations.</description>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Activity_Question_Score__c</fullName>
        <description>Sum of scores of all the questions in activity.</description>
        <label>Activity Question Score</label>
        <summarizedField>ACCL__Job_DL_Job_Definition_Template__c.ACCL__Score__c</summarizedField>
        <summaryForeignKey>ACCL__Job_DL_Job_Definition_Template__c.ACCL__Job_Definition_List__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACCL__Activity_Score__c</fullName>
        <description>Activity Score to be considered for activity performance evaluation on mobility.</description>
        <inlineHelpText>Score on which activity performance will be evaluated on mobility.</inlineHelpText>
        <label>Activity Score (100%)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Approval_State__c</fullName>
        <label>Approval State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Relevant</fullName>
                    <default>true</default>
                    <label>Not Relevant</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Call_Template_Description__c</fullName>
        <formula>ACCL__Call_Template__r.ACCL__Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Template Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Call_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Call Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Call_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ACCL__Call_Template__c.ACCL__Sales_Org__c</field>
                <operation>equals</operation>
                <valueField>$Source.ACCL__Sales_Org__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Call_Template__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Job_Definition_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Account__c</fullName>
        <formula>ACCL__Job_Definition_List_Template__r.ACCL__Consider_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consider Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_History__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consider History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Listing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consider Listing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consider Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Score__c</fullName>
        <description>Describes whether the activity is score relevant or not.</description>
        <label>Consider Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Default_Management_Type__c</fullName>
        <label>Default Management Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Description_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),
ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Field_Sales_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Sales Activity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.ACCL__Sales_Org__c</field>
                <operation>equals</operation>
                <valueField>ACCL__Field_Sales_Activity__c.ACCL__Sales_Org__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Field_Sales_Activity__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Job_Definition_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Job_Definition_List_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Activity Template</label>
        <referenceTo>ACCL__Job_Definition_List_Template__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Job_Definition_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Mark_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark For Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.ACCL__Sales_Org__c</field>
                <operation>equals</operation>
                <valueField>ACCL__Promotion__c.ACCL__Sales_Org__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Promotion__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Job_Definition_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Restrict_Org_Unit__c</fullName>
        <label>Restrict Org Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Main</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes sales organization which the activity belongs to.</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Standard_Jobs__c</fullName>
        <formula>ACCL__Job_Definition_List_Template__r.ACCL__Standard_Jobs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Jobs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Threshold_Fulfilled__c</fullName>
        <description>Defines the upper threshold limit for the activity score.</description>
        <label>Threshold Fulfilled &gt; (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACCL__Threshold_Partially_Fulfilled__c</fullName>
        <description>Defines the lower threshold limit for the activity score.</description>
        <label>Threshold Partially Fulfilled &gt; (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACCL__User_Policy__c</fullName>
        <label>User Policy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>OnlyMain</fullName>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <inlineHelpText>Updated based on activity template and valid from value.</inlineHelpText>
        <label>Valid Thru</label>
        <type>Date</type>
    </fields>
    <label>Activity</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Valid_From__c</columns>
        <columns>ACCL__Valid_Thru__c</columns>
        <columns>ACCL__Field_Sales_Activity__c</columns>
        <columns>ACCL__Approval_State__c</columns>
        <columns>ACCL__Promotion__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Activities_FSA</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Valid_From__c</columns>
        <columns>ACCL__Valid_Thru__c</columns>
        <columns>ACCL__Job_Definition_List_Template__c</columns>
        <columns>ACCL__Call_Template_Description__c</columns>
        <columns>ACCL__Field_Sales_Activity__c</columns>
        <columns>ACCL__Approval_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Field_Sales_Activity__c</field>
            <operation>startsWith</operation>
            <value>FSA</value>
        </filters>
        <label>Activities (FSA)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Approved_Non_Standard_Activities</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Valid_From__c</columns>
        <columns>ACCL__Valid_Thru__c</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Call_Template_Description__c</columns>
        <columns>ACCL__Approval_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Standard_Jobs__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCL__Approval_State__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Non Standard Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Approved_Standard_Activities</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Job_Definition_List_Template__c</columns>
        <columns>ACCL__Call_Template_Description__c</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Consider_Account__c</columns>
        <columns>ACCL__Approval_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Standard_Jobs__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCL__Approval_State__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Standard Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Non_Standard_Activities</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Valid_From__c</columns>
        <columns>ACCL__Valid_Thru__c</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Call_Template_Description__c</columns>
        <columns>ACCL__Approval_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Standard_Jobs__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Non Standard Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Standard_Activities</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Job_Definition_List_Template__c</columns>
        <columns>ACCL__Call_Template_Description__c</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Consider_Account__c</columns>
        <columns>ACCL__Approval_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Standard_Jobs__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Standard Activities</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <recordTypes>
        <fullName>ACCL__FSA_JDL</fullName>
        <active>true</active>
        <description>JDL which is related to FSA</description>
        <label>FSA JDL</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__JDL</fullName>
        <active>true</active>
        <description>JDL which is NOT related to FSA</description>
        <label>JDL</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__Active_And_Mark_for_Deletion</fullName>
        <active>true</active>
        <description>Mark for Deletion and Active can&apos;t be checked at the same time.</description>
        <errorConditionFormula>AND(ACCL__Active__c,ACCL__Mark_for_Deletion__c)</errorConditionFormula>
        <errorMessage>Mark for Deletion and Active can&apos;t be checked at the same time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Activity_Score_must_be_greater_than_zero</fullName>
        <active>true</active>
        <description>If Consider Score is yes then Activity Score must be greater than zero.</description>
        <errorConditionFormula>AND(ISPICKVAL(ACCL__Consider_Score__c, &quot;Yes&quot;) ,   OR(ACCL__Activity_Score__c &lt;= 0, ISBLANK(ACCL__Activity_Score__c)))</errorConditionFormula>
        <errorMessage>Activity Score must be greater than zero for a score relevant Activity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Date_From_Has_To_Be_Before_Date_To</fullName>
        <active>true</active>
        <errorConditionFormula>ACCL__Valid_From__c &gt; ACCL__Valid_Thru__c</errorConditionFormula>
        <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__JDL_Active_FSA_Phase</fullName>
        <active>true</active>
        <description>Activity can&apos;t be activated if the Field Sales Activity Phase is &apos;Planning&apos; or &apos;Cancelled&apos;.</description>
        <errorConditionFormula>AND(      
OR(
ISPICKVAL(ACCL__Field_Sales_Activity__r.ACCL__Phase__c, &quot;Planning&quot;),
ISPICKVAL(ACCL__Field_Sales_Activity__r.ACCL__Phase__c, &quot;Canceled&quot;)),
ACCL__Active__c
)</errorConditionFormula>
        <errorMessage>Activity can&apos;t be activated if the Field Sales Activity Phase is &apos;Planning&apos; or &apos;Cancelled&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__JDL_Time_Frame_FSA_Time_Frame</fullName>
        <active>true</active>
        <description>The Activity time frame must be within the Field Sales Activity time frame.</description>
        <errorConditionFormula>NOT(ISBLANK(ACCL__Field_Sales_Activity__c)) &amp;&amp; (ACCL__Valid_From__c &lt; ACCL__Field_Sales_Activity__r.ACCL__Valid_From__c || ACCL__Valid_Thru__c &gt; ACCL__Field_Sales_Activity__r.ACCL__Valid_Thru__c)</errorConditionFormula>
        <errorMessage>The Activity time frame must be within the Field Sales Activity time frame.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Only_Sellable_Promotions_Allowed</fullName>
        <active>true</active>
        <description>Only sellable promotions can be assigned to activity.</description>
        <errorConditionFormula>AND(ACCL__Promotion__r.Id != NULL, ACCL__Promotion__r.RecordType.DeveloperName != &apos;SellablePromotion&apos;)</errorConditionFormula>
        <errorMessage>Only promotions with &apos;Sellable&apos; Promotion Template can be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Prevent_Changing_of_JDLTemplate_referenc</fullName>
        <active>true</active>
        <errorConditionFormula>NOT ISNEW()  &amp;&amp;  ISCHANGED(ACCL__Job_Definition_List_Template__c)</errorConditionFormula>
        <errorDisplayField>ACCL__Job_Definition_List_Template__c</errorDisplayField>
        <errorMessage>The Activity Template can&apos;t be edited after Activity creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Restrict_Editability_After_Activation</fullName>
        <active>true</active>
        <description>Call Template, Default Management Type, User Policy, Valid From and Valid Thru can&apos;t be edited if the Active is checked.</description>
        <errorConditionFormula>AND
(
	NOT(ISNEW()),
	ACCL__Active__c,
	OR
	(
		ISCHANGED(ACCL__Call_Template__c), 
		ISCHANGED(ACCL__Default_Management_Type__c),
		ISCHANGED(ACCL__User_Policy__c),
		(ISCHANGED(ACCL__Valid_From__c) &amp;&amp; PRIORVALUE(ACCL__Valid_From__c) &lt; TODAY()),
		(ISCHANGED(ACCL__Valid_Thru__c) &amp;&amp; PRIORVALUE(ACCL__Valid_Thru__c) &lt; TODAY())
	) 
)</errorConditionFormula>
        <errorMessage>Call Template, Default Management Type, User Policy, Valid From and Valid Thru can&apos;t be edited if the Active is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same_as_template</fullName>
        <active>true</active>
        <description>The Activity and Activity Template must have the same Sales Org.</description>
        <errorConditionFormula>TEXT( ACCL__Sales_Org__c ) != TEXT( ACCL__Job_Definition_List_Template__r.ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Activity and Activity Template must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same_for_all_lookups</fullName>
        <active>true</active>
        <description>The Call Template and Job Definition List must have the same Sales Org.</description>
        <errorConditionFormula>AND (ACCL__Field_Sales_Activity__r.Id = null, (TEXT( ACCL__Call_Template__r.ACCL__Sales_Org__c ) &lt;&gt; TEXT( ACCL__Sales_Org__c )))</errorConditionFormula>
        <errorMessage>The Call Template and Activity must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same_for_lookup_fsa</fullName>
        <active>true</active>
        <description>The Call Template, Job Definition List and Field Sales Activity must have the same Sales Org.</description>
        <errorConditionFormula>AND( ACCL__Field_Sales_Activity__r.Id  &lt;&gt; null , (
          TEXT( ACCL__Field_Sales_Activity__r.ACCL__Sales_Org__c )  &lt;&gt;
          TEXT( ACCL__Call_Template__r.ACCL__Sales_Org__c )
          ||
          TEXT( ACCL__Field_Sales_Activity__r.ACCL__Sales_Org__c ) &lt;&gt;
          TEXT( ACCL__Sales_Org__c )))</errorConditionFormula>
        <errorMessage>The Call Template, Activity and Field Sales Activity must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same_for_promotion</fullName>
        <active>true</active>
        <description>The Promotion and the Activity must have the same Sales Org.</description>
        <errorConditionFormula>AND( ACCL__Promotion__r.Id != null, ACCL__Promotion__r.ACCL__Sales_Org__c != TEXT( ACCL__Sales_Org__c ))</errorConditionFormula>
        <errorMessage>The Promotion and the Activity must have the same Sales Org.</errorMessage>
    </validationRules>
</CustomObject>